--- a/CursedScraps.csproj
+++ b/CursedScraps.csproj
@@ -119,6 +119,7 @@
     <Compile Include="CurseEffect.cs" />
     <Compile Include="Patches\EnemyAIPatch.cs" />
     <Compile Include="Patches\HUDManagerPatch.cs" />
+    <Compile Include="Patches\MenuManagerPatch.cs" />
     <Compile Include="Patches\PlayerManagerPatch.cs" />
     <Compile Include="Patches\ItemManagerPatch.cs" />
     <Compile Include="Plugin.cs" />
